# youtube-playlist-reader

./: .env  .env.example  .gitignore  LICENSE  README.md  debug_transcript.py  demo_qa.py  pyproject.toml  requirements.txt  run_server.py  setup.py  test_better_transcripts.py  test_final_transcript.py  test_run.py  test_transcript.py  test_web_api.py  transcript_strategy.md
.claude/: settings.local.json
src/adapters/: ollama_adapter.py  transcript_extractor.py  youtube_adapter.py
src/api/: app.py  models.py  routes.py  templates.py
src/api/static/: components.html  index.html
src/config/: settings.py
src/core/: models.py
src/interfaces/: llm_repository.py  youtube_repository.py
src/services/: qa_service.py
tests/: conftest.py
tests/integration/: test_ollama_integration.py  test_youtube_adapter_integration.py
tests/unit/: test_ollama_adapter.py  test_qa_service.py  test_settings.py  test_youtube_adapter.py
